--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dexie": "^4.0.8",
+    "dexie-react-hooks": "^1.1.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
